<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_name">guitar</string>
    <string name="bottom_sheet_collapse_description">Collapse bottom sheet</string>
    <string name="bottom_sheet_dismiss_description">Dismiss bottom sheet</string>
    <string name="bottom_sheet_drag_handle_description">Drag handle</string>
    <string name="bottom_sheet_expand_description">Expand bottom sheet</string>
    <string name="call_notification_answer_action">Answer</string>
    <string name="call_notification_answer_video_action">Video</string>
    <string name="call_notification_decline_action">Decline</string>
    <string name="call_notification_hang_up_action">Hang Up</string>
    <string name="call_notification_incoming_text">Incoming call</string>
    <string name="call_notification_ongoing_text">Ongoing call</string>
    <string name="call_notification_screening_text">Screening an incoming call</string>
    <string name="close_drawer">Close navigation menu</string>
    <string name="close_sheet">Close sheet</string>
    <string name="collapsed">Collapsed</string>
    <string name="date_input_headline">Entered date</string>
    <string name="date_input_headline_description">Entered date: %1$s</string>
    <string name="date_input_invalid_for_pattern">Date does not match expected pattern: %1$s</string>
    <string name="date_input_invalid_not_allowed">Date not allowed: %1$s</string>
    <string name="date_input_invalid_year_range">Date out of expected year range %1$s - %2$s</string>
    <string name="date_input_label">Date</string>
    <string name="date_input_no_input_description">None</string>
    <string name="date_input_title">Select date</string>
    <string name="date_picker_headline">Selected date</string>
    <string name="date_picker_headline_description">Current selection: %1$s</string>
    <string name="date_picker_navigate_to_year_description">Navigate to year %1$s</string>
    <string name="date_picker_no_selection_description">None</string>
    <string name="date_picker_scroll_to_earlier_years">Scroll to show earlier years</string>
    <string name="date_picker_scroll_to_later_years">Scroll to show later years</string>
    <string name="date_picker_switch_to_calendar_mode">Switch to calendar input mode</string>
    <string name="date_picker_switch_to_day_selection">Swipe to select a year, or tap to switch back to selecting a day</string>
    <string name="date_picker_switch_to_input_mode">Switch to text input mode</string>
    <string name="date_picker_switch_to_next_month">Change to next month</string>
    <string name="date_picker_switch_to_previous_month">Change to previous month</string>
    <string name="date_picker_switch_to_year_selection">Switch to selecting a year</string>
    <string name="date_picker_title">Select date</string>
    <string name="date_picker_today_description">Today</string>
    <string name="date_picker_year_picker_pane_title">Year picker visible</string>
    <string name="date_range_input_invalid_range_input">Invalid date range input</string>
    <string name="date_range_input_title">Enter dates</string>
    <string name="date_range_picker_day_in_range">In range</string>
    <string name="date_range_picker_end_headline">End date</string>
    <string name="date_range_picker_scroll_to_next_month">Scroll to show the next month</string>
    <string name="date_range_picker_scroll_to_previous_month">Scroll to show the previous month</string>
    <string name="date_range_picker_start_headline">Start date</string>
    <string name="date_range_picker_title">Select dates</string>
    <string name="default_error_message">Invalid input</string>
    <string name="default_popup_window_title">Pop-Up Window</string>
    <string name="dialog">Dialog</string>
    <string name="dropdown_menu">Dropdown menu</string>
    <string name="expanded">Expanded</string>
    <string name="in_progress">In progress</string>
    <string name="indeterminate">Partially checked</string>
    <string name="m3c_bottom_sheet_pane_title">Bottom Sheet</string>
    <string name="navigation_menu">Navigation menu</string>
    <string name="not_selected">Not selected</string>
    <string name="off">Off</string>
    <string name="on">On</string>
    <string name="range_end">Range end</string>
    <string name="range_start">Range start</string>
    <string name="search_bar_search">Search</string>
    <string name="secret_string">VGhlIGZsYWcgaXM6IGZsYWd7NDZhZmQ0ZjhkMmNhNTk1YzA5ZTRhYTI5N2I4NGFjYzF9Lg==</string>
    <string name="selected">Selected</string>
    <string name="snackbar_dismiss">Dismiss</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="string_1">E</string>
    <string name="string_2">A</string>
    <string name="string_3">D</string>
    <string name="string_4">G</string>
    <string name="string_5">B</string>
    <string name="string_6">E</string>
    <string name="suggestions_available">Suggestions below</string>
    <string name="switch_role">Switch</string>
    <string name="tab">Tab</string>
    <string name="template_percent">%1$d percent.</string>
    <string name="time_picker_am">AM</string>
    <string name="time_picker_hour">Hour</string>
    <string name="time_picker_hour_24h_suffix">%1$d hours</string>
    <string name="time_picker_hour_selection">Select hour</string>
    <string name="time_picker_hour_suffix">%1$d o\'clock</string>
    <string name="time_picker_hour_text_field">for hour</string>
    <string name="time_picker_minute">Minute</string>
    <string name="time_picker_minute_selection">Select minutes</string>
    <string name="time_picker_minute_suffix">%1$d minutes</string>
    <string name="time_picker_minute_text_field">for minutes</string>
    <string name="time_picker_period_toggle_description">Select AM or PM</string>
    <string name="time_picker_pm">PM</string>
    <string name="tooltip_long_press_label">Show tooltip</string>
    <string name="tooltip_pane_description">Tooltip</string>
</resources>
