<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:id="@+id/backgroundImage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/guitar"
        android:scaleType="centerCrop"/>
    <LinearLayout
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <Button
            android:id="@+id/btnNote1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_1"/>
        <Button
            android:id="@+id/btnNote2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_2"/>
        <Button
            android:id="@+id/btnNote3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_3"/>
        <Button
            android:id="@+id/btnNote4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_4"/>
        <Button
            android:id="@+id/btnNote5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_5"/>
        <Button
            android:id="@+id/btnNote6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_6"/>
    </LinearLayout>
</FrameLayout>
